--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Contact Form 03</title>
+  	<title>Dana Node</title>
+	  <br>
+	  <h1>Just a better node</h1>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -14,11 +16,13 @@
 	</head>
 	<body>
 	<section class="ftco-section">
+
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
 					<h2 class="heading-section">Contact Form #03</h2>
 				</div>
+				<div class="info-wrap w-100 p-5 img" style="background-image: url(images/trooper.jpg);"></div>
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-md-12">
