added line and image

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
   <head>
   	<title>Dana Node</title>
-	  <br>
-	  <h1>Just a better node</h1>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -20,7 +18,8 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Contact Form #03</h2>
+					<h1 class="heading-section">Dana Node Home</h1>
+					<h2>Just a better node</h2>
 				</div>
 				<div class="info-wrap w-100 p-5 img" style="background-image: url(images/trooper.jpg);"></div>
 			</div>
