--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
-					<h1 class="heading-section">Dana Node Home</h1>
-					<h2>Just a better node</h2>
+					<h1 class="heading-section">Dana Node Pool</h1>
+					<h2>Let Us Mint Together</h2>
 				</div>
 				<div class="info-wrap w-100 p-5 img" style="background-image: url(images/trooper.jpg);"></div>
 			</div>
@@ -31,45 +31,24 @@
 								<div class="dbox w-100 text-center">
 			        		<div class="icon d-flex align-items-center justify-content-center">
 			        			<span class="fa fa-map-marker"></span>
-			        		</div>
-			        		<div class="text">
-				            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-				          </div>
-			          </div>
-							</div>
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-			        		<div class="icon d-flex align-items-center justify-content-center">
-			        			<span class="fa fa-phone"></span>
-			        		</div>
-			        		<div class="text">
-				            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-				          </div>
-			          </div>
-							</div>
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-			        		<div class="icon d-flex align-items-center justify-content-center">
-			        			<span class="fa fa-paper-plane"></span>
-			        		</div>
-			        		<div class="text">
-				            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-				          </div>
-			          </div>
-							</div>
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-			        		<div class="icon d-flex align-items-center justify-content-center">
-			        			<span class="fa fa-globe"></span>
-			        		</div>
-			        		<div class="text">
-				            <p><span>Website</span> <a href="#">yoursite.com</a></p>
-				          </div>
-			          </div>
-							</div>
-						</div>
+								<div class="text">
+									<p><span>POOL TICKER:</span> DNND</p>
+									<p><span>COMMISSION:</span> 0%</p>
+									<p><span>POOL ID:</span> pool12tlu3dm864fzxgcjp9jrsykcmcvxskjtqwy07z982avqx3n9dp2</p>
+									<p><span>Address:</span> Indiana, USA</p>
+								  </div>
+								</div>
+                                <div class="col-md-3">
+                                    <div class="dbox w-100 text-center">
+                                <div class="icon d-flex align-items-center justify-content-center">
+                                    <span class="fa fa-paper-plane"></span>
+                                </div>
+                                <div class="text">
+								<p><span>Phone:</span> <a href="tel://2197898351">+ 12197898351</a></p> 
+								<p><span>Email:</span> <a href="mailto:dananodeada@gmail.com">dananodeada@gmail.com</a></p>
+				         		</div>
 						<div class="row no-gutters">
-							<div class="col-md-7">
+							<div class="col-md-4">
 								<div class="contact-wrap w-100 p-md-5 p-4">
 									<h3 class="mb-4">Contact Us</h3>
 									<div id="form-message-warning" class="mb-4"></div> 
