--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
+				<div class="col-md-16 text-center mb-6">
 					<h1 class="heading-section">Dana Node Pool</h1>
-					<h2>Highly available, Secure, Fee 0% </h2>
-					<h1>Let Us Mint Together</h1>
+					<h2>Commitment: Highly available, Secure, Fee 0% </h2>
+					<h1>Let Us Delegate to DNND</h1>
 				</div>
 				<div class="info-wrap w-100 p-5 img" style="background-image: url(images/trooper.jpg);"></div>
 			
