--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				          </div>
 			          </div>
 					
-					           <h3 class="mb-4">Contact Us</h3>
+					           <h3 class="mb-4">Contact, Us under construction</h3>
 							</div>
 						</div>
 						<div class="row no-gutters">
