--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <!-- saved from url=(0014)about:internet -->
 <html lang="en">
 <head>
-	<title> GMB Group </title>
+	<title> Dana Node Pool </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
-	<meta name="Author" content="GMB">
-	<meta name="Keywords" content="GMB, DRI, pellet, Midrex, HYL, Aluminum, Cement, reformer, heat recovery system,">
-	<meta name="Description" content="GMB is a Group of expert with over 150 extensive experience in Operation, Maintenance, Engineering & Design, in various industries. We offer unique services in the industry for the benefit of">
+	<meta name="Author" content="Dana">
+	<meta name="Keywords" content="Dana, Dana Node, Ada, Cardano pool,">
+	<meta name="Description" content="Dana Node is a cardano pool">
 	<link rel="stylesheet" href="preview_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="index_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 </head>
