--- a/preview_002.htm
+++ b/preview_002.htm
@@ -3,12 +3,12 @@
 <!-- saved from url=(0014)about:internet -->
 <html lang="en">
 <head>
-	<title> GMB Group Experts </title>
+	<title> Dana Node Pool </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
-	<meta name="Author" content="GMB Group">
-	<meta name="Keywords" content="GMB, DRI, pellet, Midrex, HYL, Aluminum, Cement, Direct Reduction, continuce improvement, Reformer, Heat recovery system, Furnace">
-	<meta name="Description" content="GMB, DRI, pellet, Midrex, HYL, Aluminum, Cement, Direct Reduction, continuce improvement, Reformer, Heat recovery system, Furnace">
+	<meta name="Author" content="Dana Node">
+	<meta name="Keywords" content="Dana Node, Cardano Pool, Ada pool, delegate, cardano delegate">
+	<meta name="Description" content="Dana Node, Cardano Pool, Ada pool, delegate, cardano delegate">
 	<link rel="stylesheet" href="preview_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="preview_002_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 </head>
@@ -53,7 +53,7 @@
 	<span id="e17"></span>
 	<div id="e16" class="info">
 		<a id="a16" class="info" href="mailto:miguel.cardenas@gmbgroup.org">
-		Miguel Angel Càrdenas <br> 
+		Miguel Angel CÃ rdenas <br> 
 		Director General & Presiden<br> 
 		Miguel.Cardenas@GMBgroup.org</a>
 	</div>
