--- a/preview_004.htm
+++ b/preview_004.htm
@@ -3,12 +3,12 @@
 <!-- saved from url=(0014)about:internet -->
 <html lang="en">
 <head>
-	<title> GMB Products </title>
+	<title> Dana Node Pool </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
-	<meta name="Author" content="GMB Group">
-	<meta name="Keywords" content="GMB, DRI, pellet, Midrex, HYL, Aluminum, Cement, Direct Reduction, continuce improvement, Reformer, Heat recovery system, Furnace">
-	<meta name="Description" content="GMB, DRI, pellet, Midrex, HYL, Aluminum, Cement, Direct Reduction, continuce improvement, Reformer, Heat recovery system, Furnace">
+	<meta name="Author" content="Dana Node">
+	<meta name="Keywords" content="Dana node, Cardano pool">
+	<meta name="Description" content="">
 	<link rel="stylesheet" href="preview_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="preview_004_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 </head>
